i18n/es/docusaurus-plugin-content-docs-android/version-1.5.3/Changelog.md
# Changelog

## Versiones

### 1.5.3

- General
  - Pantallas de diagnóstico con reintentar
  - Flow
    - Nuevas funcionalidades
    - Tema dinámico
    - Preview controller
    - Servicios de cliente y preview
    - Mejoras
- Selphi
  - Nueva versión 5.12.0
  - Tutoriales
  - Envío de bestImage completa a tracking
- SelphID
  - Nueva versión 1.22.3
- Phingers
  - Se ha añadido retroalimentación háptica con vibración
  - Mejoras en tutorial
- NFC
  - Mejoras
- VideoId
  - Mejoras en la conexión
  - Ajustes UX
- VideoCall
  - ScreenSharing
  - Nuevos estados
  - Mejoras en la conexión
- VideoRecording
  - Nuevos estados
  - Mejoras en la conexión
  - Incidencia conocida: API 34 Android
- Capture QR
  - QR formatos

### 1.5.2

- General
  - Mejoras en pantallas pequeñas
  - Nuevo SelphiSignController
  - Nuevo VideoIdSignController
  - Nuevas clases SDKImage y SDKApplication
- NFC
  - Mejoras
- SelphID
  - 1.21.1
- Selphi
  - 5.11.2
- Voz
  - Mejora del tamaño de la librería

### 1.5.1

- General
  - Mejoras y corrección de errores
- Voz
  - Actualización de la librería interna
  - Ajustes de calibración
  - Devolución de audios tokenizados
- Phingers
  - Seguimiento WSQ
- Comportamiento
  - Actualización de la librería interna
  - Mejoras y correcciones

### 1.5.0

- Compatible con API 34 (Android 14)
- Actualizados los plugins Gradle de Android (8.1.1)
- Versión actualizada de Kotlin utilizada (1.9.10)
- Ajustes de datos de entrada del componente de vídeo
- Mejorado SdkResult como clase sellada
- Nomenclatura de los pasos de entrada NewOperation
